# EuphoriaParties-Endstone

./: README.md  pyproject.toml
src/endstone_euphoria_parties/: __init__.py  achievement_manager.py  hud_manager.py  leaderboard_manager.py  models.py  party_manager.py  party_show_manager.py  scoreboard_manager.py  storage.py
tests/: test_models.py  test_party_manager.py  test_storage.py
